# dk3pi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_bin_ampgen.sh  build_pull_study.sh  test.sh  tmp.cpp
charmFitter/: CMakeLists.txt  README.md
charmFitter/BES3/: BESIII_chi2.h  bes_interface.h  test_BESIII.C
charmFitter/CLEO/: README.md  cleo_interface.h  cleo_ll.h  test_cleo_ll.cpp
charmFitter/charm_threshhold/: charm_interface.h
charmFitter/img/tex/: rateRatio.tex  rateRatioABC.tex
charmFitter/include/: DecaySimulator.h  PhaseSpaceBinning.h  RatioCalculator.h  fitterUtil.h  physics.h
charmFitter/include/fitter/: BaseFitter.h  BesCombinationFitter.h  CharmFitterBase.h  CharmThreshholdFitter.h  CleoCombinationFitter.h  ConstrainedFitter.h  FitError.h  FitterUtils.h  MinuitFitterBase.h  MinuitScannerBase.h  PolynomialFitter.h  RootFitter.h  UnconstrainedFitter.h  multiBinFit.h
charmFitter/python/: CMakeLists.txt  cleoScan.py
charmFitter/python/include/: bindings.h  cleoFitter.h  simulator.h
charmFitter/python/src/: bindings.cpp  cleoFitter.cpp  simulator.cpp
charmFitter/scripts/: CMakeLists.txt  bes_chi2.cpp  bes_combination.cpp  bin_generated_decays.cpp  charm_threshhold_chi2.cpp  cleo_combination.cpp  cleo_likelihood.cpp  create_all_cleo_plots.sh  decay_simulator_plots.cpp  phsp_bins.py  plots.cpp  pull_study.cpp  py_fitter.py  py_pull_study.py  scans.cpp  simulator.py  test_param_scan.cpp
charmFitter/scripts/python/: ampgen_scan.py  cleo_scan.py  common.py  mixed_ampgen_scan.py  phsp_bins.py  py_fit_example.py  py_pull_study.py  py_simulated_charmfits.py  py_simulated_scan.py  weighted_ampgen_scan.py
charmFitter/src/: DecaySimulator.cpp  PhaseSpaceBinning.cpp  RatioCalculator.cpp  fitterUtil.cpp  physics.cpp
charmFitter/src/fitter/: BesCombinationFitter.cpp  CharmFitterBase.cpp  CharmThreshholdFitter.cpp  CleoCombinationFitter.cpp  ConstrainedFitter.cpp  FitterUtils.cpp  MinuitFitterBase.cpp  MinuitPolynomialFitter.cpp  MinuitScannerBase.cpp  PhysicalFitter.cpp  PolynomialFitter.cpp  UnconstrainedFitter.cpp  multiBinFit.cpp
efficiency/: CMakeLists.txt  README.md  create.py  requirements.md
efficiency/ampGen/: README.md
efficiency/ampGen/include/: amplitudes.h  findZ.h  flatPhsp.h
efficiency/ampGen/src/: amplitudes.cpp  findZ.cpp
efficiency/bdt_reweighting/: README.md  classification.py  plotting.py  reweight_utils.py  reweighting.py  visualisations.py
efficiency/bdt_reweighting/include/: bdt_reweighting.h
efficiency/bdt_reweighting/src/: bdt_reweighting.cpp
efficiency/chowLiu/: README.md
efficiency/chowLiu/include/: graphTheory.h
efficiency/chowLiu/src/: ChowLiu.cpp  graphTheory.cpp
efficiency/goodness_of_fit/: 2018MCflat.root  README.md  example.py  goodness_of_fit.py
efficiency/include/: ChowLiu.h  ReadRoot.h  efficiency.h  efficiencyUtil.h  graphTheory.h  toyStudy.h
efficiency/lib/: ChowLiu.cpp  ReadRoot.cpp  efficiency.cpp  efficiencyUtil.cpp  flatPhsp.cpp  graphTheory.cpp  toyStudy.cpp
efficiency/misc/: README.md
efficiency/misc/include/: ReadRoot.h
efficiency/misc/src/: ReadRoot.cpp  efficiencyUtil.cpp
efficiency/model/: README.md  bdt_paths.pickle  categorisation.py  create.py  create_bdts.py  definitions.py  efficiency_model.py  productions.py  requirements.txt
efficiency/model/amplitude_models/: README.md  build.sh  dcs_wrapper.cpp
efficiency/model/creation/: README.md  create_bdts.py  productions.py
efficiency/model/test/: test_categorisation.py
efficiency/model/util/: categorisation.py  definitions.py  phsp_binning.py  phsp_parameterisation.py  util.py
efficiency/scripts/: CMakeLists.txt  README.md  bdt_projections.py  bdt_reweighting_1d.py  bdt_reweighting_test.py  bdt_roc_curve.py  bdt_signature.py  bdt_tuning.py  dalitzPlot.cpp  efficiency_projections.py  mc_reweighting.py  plot_all_projections.py  poster_plot.py  prompt_to_semileptonic.cpp  reweight_ws_using_rs.py  scriptUtils.cpp  scriptUtils.h  script_util.py  test.py  test_chisq.py  toy_efficiency_example.cpp
lhcbMonteCarlo/sWeighting/: CMakeLists.txt  README.md  cuts.cpp  cuts.h  sWeighting.cpp  sWeighting.h
lhcbMonteCarlo/sWeighting/scripts/: CMakeLists.txt  add_delta_m_branch.cpp  example_s_weighting.cpp  makeCuts.cpp
lib/: CMakeLists.txt  DecaySimulator.cpp  DecaySimulator.h  Fitter.cpp  Fitter.h  MCGenerator.cpp  MCGenerator.h  MinuitFcns.cpp  MinuitFcns.h  MinuitFitter.cpp  MinuitFitter.h  PhaseSpaceBinning.cpp  README.txt  RatioCalculator.cpp  RatioCalculator.h  ReadAmpGen.cpp  build_lib.sh  physics.h  plottingHelpers.cpp  util.cpp  util.h
lib/fitter/: BaseFitter.cpp  BaseFitter.h  Fitter.cpp  Fitter.h  FitterUtils.cpp  FitterUtils.h  MinuitFitterBase.cpp  MinuitFitterBase.h  MinuitPolynomialFitter.cpp  MinuitPolynomialFitter.h  MinuitPolynomialScan.cpp  MinuitPolynomialScan.h  MinuitScannerBase.cpp  MinuitScannerBase.h  ParamScanner.cpp  ParamScanner.h  PhysicalFitter.cpp  PhysicalFitter.h  RootFitter.cpp
lib/include/: D2K3PiError.h  RatioCalculator.h  physics.h  util.h
lib/include/fitter/: BaseFitter.h  FitterUtils.h  MinuitFcns.h  MinuitFitterBase.h  MinuitPolynomialFitter.h  PhysicalFitter.h  README.md  RootFitter.h
lib/src/: PhaseSpaceBinning.cpp  RatioCalculator.cpp  util.cpp
lib/src/fitter/: MinuitFcns.cpp  MinuitFitterBase.cpp  MinuitPolynomialFitter.cpp  MinuitScannerBase.cpp  PhysicalFitter.cpp  RootFitter.cpp
test/it/: CMakeLists.txt  build_integration_tests.sh  driver.cpp  it.cpp  test_correlated_random_numbers.cpp  test_decay_simulator.cpp  test_minuit_fitter.cpp  test_ratio_calculator.cpp  test_simulator.cpp
test/it/charmFitter/: CMakeLists.txt  test_ratio_calculator.cpp  test_simulator.cpp
test/it/common/: CMakeLists.txt
test/it/efficiency/: CMakeLists.txt  cf.root  dBarCf.root  dDcs.root  dcs.root  flat_phase_space.cpp  test_amplitudes.cpp  (+3 more)
test/ut/: CMakeLists.txt  build_tests.sh  driver.cpp  test_fitter.cpp  test_fitter_utils.cpp  test_hello_world.cpp  test_mc_generation.cpp  test_pull_study.cpp  test_ratio_calculator.cpp  test_simulator.cpp  test_util.cpp  ut.cpp
(+138 files in other folders)
